--- a/template/src/App.css
+++ b/template/src/App.css
@@ -6,3 +6,13 @@
 .Logo {
   height: 300px;
 }
+
+footer {
+  height: 10%;
+  background-color: rgba(128, 128, 128, 0.507);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
